# task-2.2

./: CMakeLists.txt
include/: getopt.h  hex_dumper.h
src/: getopt.c  hex_dumper.c  main.c
tests/: test_hex_dumper.c
